tests/ActsFor4.jif
class ActsFor4
{
    public void n() {
        int{Bob:} x = 0;
        int{Bob:Alice} y = 0;

        actsFor(Alice, Bob) {
            y = x; // add a reader that acts for the owner
        }
        else {
            // y = x; // error
            x = y; // add a reader
        }
    }
}
